Added success response status, adding new user into DB
